--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,15 @@
 kotlin.code.style=official
+org.gradle.jvmargs=-Xmx2g -XX:MaxMetaspaceSize=512m -Dfile.encoding=UTF-8
 
 kotlinVersion=1.8.10
+
+serializationVersion=1.4.1
+openapiVersion=6.3.0
+datetimeVersion=0.4.0
+
+jacksonVersion=2.14.1
+
+kotestVersion=5.5.5
+jUnitJupiterVersion=5.9.2
+testcontainersVersion=1.17.6
+
