--- a/gradle.properties
+++ b/gradle.properties
@@ -1,15 +1,33 @@
 kotlin.code.style=official
+kotlin.native.cacheKind=none
 org.gradle.jvmargs=-Xmx2g -XX:MaxMetaspaceSize=512m -Dfile.encoding=UTF-8
 
 kotlinVersion=1.8.10
+coroutinesVersion=1.6.4
 
 serializationVersion=1.4.1
 openapiVersion=6.3.0
 datetimeVersion=0.4.0
+atomicfuVersion=0.20.2
 
 jacksonVersion=2.14.1
+okhttpVersion=4.9.3
 
 kotestVersion=5.5.5
 jUnitJupiterVersion=5.9.2
 testcontainersVersion=1.17.6
+
+logbackVersion=1.4.6
+kotlinLoggingJvmVersion=3.0.5
+
+# Spring
+springframeworkBootVersion=3.0.6
+springDependencyManagementVersion=1.1.0
+pluginSpringVersion=1.8.10
+pluginJpa=1.8.10
+springdocOpenapiUiVersion=2.0.0
+rabbitVersion=5.13.1
+testContainersVersion=1.17.4
+pluginShadow=7.1.2
+yandexCloudSdkVersion=2.5.1
 
