--- a/gradle.properties
+++ b/gradle.properties
@@ -13,6 +13,8 @@ atomicfuVersion=0.20.2
 jacksonVersion=2.14.1
 okhttpVersion=4.9.3
 
+bmuschkoVersion=8.1.0
+
 kotestVersion=5.5.5
 jUnitJupiterVersion=5.9.2
 testcontainersVersion=1.17.6
