--- a/gradle.properties
+++ b/gradle.properties
@@ -5,6 +5,8 @@ org.gradle.jvmargs=-Xmx2g -XX:MaxMetaspaceSize=512m -Dfile.encoding=UTF-8
 kotlinVersion=1.8.10
 coroutinesVersion=1.6.4
 
+ktorVersion=2.2.4
+
 serializationVersion=1.4.1
 openapiVersion=6.3.0
 datetimeVersion=0.4.0
@@ -30,6 +32,14 @@ pluginJpa=1.8.10
 springdocOpenapiUiVersion=2.0.0
 rabbitVersion=5.13.1
 testContainersVersion=1.17.4
+
+#Repo
+cache4kVersion=0.11.0
+kmpUUIDVersion=0.7.0
 pluginShadow=7.1.2
 yandexCloudSdkVersion=2.5.1
+
+# PSQL
+postgresDriverVersion=42.6.0
+exposedVersion=0.41.1
 
